--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RealEstate</string>
+
+    <!--All Listings-->
+    <string name="all_listings_title_text">All Listings</string>
 </resources>
