Add dummy listing details screen
- Add ListingDetailsScreen with dummy data
- Add ListingDetailsViewModel and handle go back intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="all_listings_title_text">All Listings</string>
     <string name="all_listings_image_content_description">Image of the listing</string>
     <string name="all_listings_empty_list_text">No listings available at the moment</string>
+
+    <!--Listing Details-->
+    <string name="listing_details_title_text">Listing Details</string>
 </resources>
