--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,26 @@
     <string name="all_listings_image_content_description">Image of the listing</string>
     <string name="all_listings_empty_list_text">No listings available at the moment</string>
 
+    <plurals name="all_listings_beds">
+        <item quantity="zero">N/A</item>
+        <item quantity="one">%d bed</item>
+        <item quantity="other">%d beds</item>
+    </plurals>
+
+    <plurals name="all_listings_rooms">
+        <item quantity="zero">N/A</item>
+        <item quantity="one">%d room</item>
+        <item quantity="other">%d rooms</item>
+    </plurals>
+
+    <string name="not_available_text">N/A</string>
+    <string name="all_listings_area_zero">N/A</string>
+    <string name="all_listings_area">%s m²</string>
+
     <!--Listing Details-->
     <string name="listing_details_title_text">Listing Details</string>
     <string name="listing_details_image_content_description">Property image</string>
     <string name="listing_details_features_title">Property Features</string>
-    <string name="listing_details_bedrooms_label">Bedrooms</string>
-    <string name="listing_details_rooms_label">Rooms</string>
-    <string name="listing_details_area_label">Area</string>
     <string name="listing_details_agent_title">Agent Information</string>
     <string name="listing_details_agent_subtitle">Real Estate Agent</string>
 </resources>
